--- a/views/index.html
+++ b/views/index.html
@@ -13,60 +13,89 @@
 <script>
 var app = angular.module("myShoppingList", []); 
 app.controller("myCtrl", function($scope) {
-    /*$scope.productsMonthly = ["молоко", "сметана", "масло", "хліб", "сосиски", "твердий сир", "круасани", "йогурт", "печиво", "яблука", "банани","шаріки", "жуйки", "інші фрукти", "спагеті"];*/
+   // $scope.productsIrregular = ["сіль", "сода", "оцет", "приправа до курки", "лавровий лист", "кориця", "розпушувач", "ваніль", "загущувач", "желе", "чорнослив", "курага", "мак", "пшениця", "засіб до вікон", "засіб до туалету", "бритви", "засіб для гоління", "швабра"];
     if (typeof(storage) !== "undefined") {
       $scope.products=JSON.parse(localStorage.getItem("items"));
       $scope.productsWeekly=JSON.parse(localStorage.getItem("itemsWeekly"));
       $scope.productsMonthly=JSON.parse(localStorage.getItem("itemsMonthly"));
+      $scope.productsIrregular=JSON.parse(localStorage.getItem("itemsIrregular"));
     }
 
     $scope.addItem = function (listType) {
         $scope.errortext = "";
-        if (listType == "d") {     
-          if (!$scope.addMe) {return;}   
-          if ($scope.products.indexOf($scope.addMe) == -1) {
-              $scope.products.push($scope.addMe);
-          } else {
-              $scope.errortext = "The item is already in your shopping list."; 
+        switch (listType) {
+          case 'd':{     
+            if (!$scope.addMe) {return;}   
+            if ($scope.products.indexOf($scope.addMe) == -1) {
+                $scope.products.push($scope.addMe);
+            } else {
+                $scope.errortext = "The item is already in your daily shopping list."; 
+            }
+            break;
           }
-        } else if (listType == "w") {
-          if (!$scope.addMeWeekly) {return;}   
-          if ($scope.productsWeekly.indexOf($scope.addMeWeekly) == -1) {
-              $scope.productsWeekly.push($scope.addMeWeekly);
-          } else {
-              $scope.errortext = "The item is already in your shopping list."; 
-          }   
-        } else if (listType == "m") {
-          if (!$scope.addMeMonthly) {return;}   
-          if ($scope.productsMonthly.indexOf($scope.addMeMonthly) == -1) {
-              $scope.productsMonthly.push($scope.addMeMonthly);
-          } else {
-              $scope.errortext = "The item is already in your shopping list."; 
-          }   
-        }
+          case 'w': {
+            if (!$scope.addMeWeekly) {return;}   
+            if ($scope.productsWeekly.indexOf($scope.addMeWeekly) == -1) {
+                $scope.productsWeekly.push($scope.addMeWeekly);
+            } else {
+                $scope.errortext = "The item is already in your weekly shopping list."; 
+            }
+            break;
+          }
+          case 'm': {
+            if (!$scope.addMeMonthly) {return;}   
+            if ($scope.productsMonthly.indexOf($scope.addMeMonthly) == -1) {
+                $scope.productsMonthly.push($scope.addMeMonthly);
+            } else {
+                $scope.errortext = "The item is already in your monthly shopping list."; 
+            }
+            break;
+          }
+          case 'i': {
+            if (!$scope.addMeIrregular) {return;}   
+            if ($scope.productsIrregular.indexOf($scope.addMeIrregular) == -1) {
+                $scope.productsIrregular.push($scope.addMeIrregular);
+            } else {
+                $scope.errortext = "The item is already in your irregular shopping list."; 
+            } 
+            break; 
+          } 
+        }  // end switch
     }
     $scope.removeItem = function (x,listType) {
-        $scope.errortext = "";   
-        if (listType=='d') {
-          $scope.products.splice(x, 1);
-        } else if (listType=='w'){
-          $scope.productsWeekly.splice(x, 1);
-        } else if (listType=='m'){
-          $scope.productsMonthly.splice(x, 1);
-        }
+        $scope.errortext = ""; 
+        switch (listType){
+          case 'd': {
+            $scope.products.splice(x, 1);
+            break;
+          }
+          case 'w': {
+            $scope.productsWeekly.splice(x, 1);
+            break;
+          }
+          case 'm': {
+            $scope.productsMonthly.splice(x, 1);
+            break;
+          }
+          case 'i': {
+            $scope.productsIrregular.splice(x, 1);
+            break;
+          }
+        }  
     }
     $scope.saveItems = function() {
       if (typeof(storage) !== "undefined") {
         localStorage.setItem("items", JSON.stringify($scope.products));
         localStorage.setItem("itemsWeekly", JSON.stringify($scope.productsWeekly));
         localStorage.setItem("itemsMonthly", JSON.stringify($scope.productsMonthly));
+        localStorage.setItem("itemsIrregular", JSON.stringify($scope.productsIrregular));
       }
     }
 });
 </script>
 <div class="container-fluid">
   <div class="row" ng-app="myShoppingList" ng-controller="myCtrl">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <h1>Items check daily:</h1>
         <ul>
           <li ng-repeat="x in products">{{x}} <button ng-click="removeItem($index, 'd')" class="btn btn-xs btn-primary"> Х </span></li>
@@ -74,7 +103,7 @@ app.controller("myCtrl", function($scope) {
         <input ng-model="addMe">
         <button ng-click="addItem('d')" class="btn  btn-primary">Add</button>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <h1>Items to check weekly:</h1>
         <ul>
           <li ng-repeat="x in productsWeekly">{{x}} <button ng-click="removeItem($index, 'w')" class="btn btn-xs btn-primary"> Х </span></li>
@@ -82,13 +111,21 @@ app.controller("myCtrl", function($scope) {
         <input ng-model="addMeWeekly">
         <button ng-click="addItem('w')" class="btn  btn-primary">Add</button>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <h1>Items to check monthly:</h1>
         <ul>
           <li ng-repeat="x in productsMonthly">{{x}} <button ng-click="removeItem($index, 'm')" class="btn btn-xs btn-primary"> Х </span></li>
         </ul>
         <input ng-model="addMeMonthly">
         <button ng-click="addItem('m')" class="btn  btn-primary">Add</button>
+    </div>
+    <div class="col-sm-3">
+      <h1>Items to check on occasion:</h1>
+        <ul>
+          <li ng-repeat="x in productsIrregular">{{x}} <button ng-click="removeItem($index, 'i')" class="btn btn-xs btn-primary"> Х </span></li>
+        </ul>
+        <input ng-model="addMeIrregular">
+        <button ng-click="addItem('i')" class="btn  btn-primary">Add</button>
     </div>
     <div>{{errortext}}</div>
   <div>Try to add the same item twice, and you will get an error message.</div>
