--- a/views/mystyles.css
+++ b/views/mystyles.css
@@ -1,6 +1,3 @@
-.daily, .monthly {background-color: #cff4ff;}
-.weekly, .irregular {background-color: #f6fb64;}
-
 nav{margin-top: 10px; margin-bottom: 10px;}
 
 nav ul {
@@ -28,3 +25,6 @@ nav li a:hover {
 }
 .icon {display: inline; padding: 10px;}
 h1 {display: inline-block; vertical-align: middle;}
+#errorTextMessage {display: inline-block; width: 50%; height: 45px; vertical-align: middle;}
+#saveItemsBtn {display: inline; float: right;}
+.footer {clear: both; padding-top: 20px; background-color: #cff4ff;}
