--- a/views/index.html
+++ b/views/index.html
@@ -26,34 +26,66 @@
     </nav>
     
     <div class="col-sm-3 daily" id="dailyList">
-      <h2>daily:</h2>
-        <ul>
-          <li ng-repeat="x in products">{{x}} <button ng-click="removeItem($index, 'd')" class="btn btn-xs btn-primary"> Х </span></li>
-        </ul>
+      <h3>daily:</h3>
+        <table>
+          <tr ng-repeat="x in productsDaily">
+            <td>
+              <div class="item">{{x}} </div>
+            </td>
+            <td>
+              <button ng-click="removeItem($index, 'd')" class="btn btn-xs btn-primary"> Х </button>
+              <button ng-click="moveItem($index, 'd','s')" class="btn btn-xs btn-primary"> > </button>
+            </td>
+          </tr>
+        </table>
         <input ng-model="addMe">
         <button ng-click="addItem('d')" class="btn  btn-primary">Add</button>
     </div>
     <div class="col-sm-3 weekly" id="weeklyList">
-      <h2>weekly:</h2>
-        <ul>
-          <li ng-repeat="x in productsWeekly">{{x}} <button ng-click="removeItem($index, 'w')" class="btn btn-xs btn-primary"> Х </span></li>
-        </ul>
+      <h3>weekly:</h3>
+        <table>
+          <tr ng-repeat="x in productsWeekly">
+            <td>
+              <div class="item">{{x}} </div>
+            </td>
+            <td>
+              <button ng-click="removeItem($index, 'w')" class="btn btn-xs btn-primary"> Х </button>
+              <button ng-click="moveItem($index, 'w','s')" class="btn btn-xs btn-primary"> > </button>
+            </td>
+          </tr>
+        </table>
         <input ng-model="addMeWeekly">
         <button ng-click="addItem('w')" class="btn  btn-primary">Add</button>
     </div>
     <div class="col-sm-3 monthly" id="monthlyList">
-      <h2>monthly:</h2>
-        <ul>
-          <li ng-repeat="x in productsMonthly">{{x}} <button ng-click="removeItem($index, 'm')" class="btn btn-xs btn-primary"> Х </span></li>
-        </ul>
+      <h3>monthly:</h3>
+        <table>
+          <tr ng-repeat="x in productsMonthly">
+            <td>
+              <div class="item">{{x}} </div>
+            </td>
+            <td>
+              <button ng-click="removeItem($index, 'm')" class="btn btn-xs btn-primary"> Х </button>
+              <button ng-click="moveItem($index, 'm','s')" class="btn btn-xs btn-primary"> > </button>
+            </td>
+          </tr>
+        </table>
         <input ng-model="addMeMonthly">
         <button ng-click="addItem('m')" class="btn  btn-primary">Add</button>
     </div>
     <div class="col-sm-3 irregular" id="irregularList">
-      <h2>on occasion:</h2>
-        <ul>
-          <li ng-repeat="x in productsIrregular">{{x}} <button ng-click="removeItem($index, 'i')" class="btn btn-xs btn-primary"> Х </span></li>
-        </ul>
+      <h3>on occasion:</h3>
+        <table>
+          <tr ng-repeat="x in productsIrregular">
+            <td>
+              <div class="item">{{x}} </div>
+            </td>
+            <td>
+              <button ng-click="removeItem($index, 'i')" class="btn btn-xs btn-primary"> Х </button>
+              <button ng-click="moveItem($index, 'i','s')" class="btn btn-xs btn-primary"> > </button>
+            </td>
+          </tr>
+        </table>
         <input ng-model="addMeIrregular">
         <button ng-click="addItem('i')" class="btn  btn-primary">Add</button>
     </div>
