replaced buttons "delete" and "move" with images

--- a/views/index.html
+++ b/views/index.html
@@ -33,8 +33,8 @@
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <button ng-click="removeItem($index, 'd')" class="btn btn-xs btn-primary"> Х </button>
-              <button ng-click="moveItem($index, 'd','s')" class="btn btn-xs btn-primary"> > </button>
+              <img ng-click="removeItem($index, 'd')" src="bin.png" title="delete from list"/>
+              <img ng-click="moveItem($index, 'd','s')" src="cart.png" title="move to cart"/>
             </td>
           </tr>
         </table>
@@ -49,8 +49,8 @@
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <button ng-click="removeItem($index, 'w')" class="btn btn-xs btn-primary"> Х </button>
-              <button ng-click="moveItem($index, 'w','s')" class="btn btn-xs btn-primary"> > </button>
+              <img ng-click="removeItem($index, 'w')" src="bin.png" title="delete from list"/>
+              <img ng-click="moveItem($index, 'w','s')" src="cart.png" title="move to cart"/>
             </td>
           </tr>
         </table>
@@ -65,8 +65,8 @@
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <button ng-click="removeItem($index, 'm')" class="btn btn-xs btn-primary"> Х </button>
-              <button ng-click="moveItem($index, 'm','s')" class="btn btn-xs btn-primary"> > </button>
+              <img ng-click="removeItem($index, 'm')" src="bin.png" title="delete from list"/>
+              <img ng-click="moveItem($index, 'm','s')" src="cart.png" title="move to cart"/>
             </td>
           </tr>
         </table>
@@ -81,8 +81,8 @@
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <button ng-click="removeItem($index, 'i')" class="btn btn-xs btn-primary"> Х </button>
-              <button ng-click="moveItem($index, 'i','s')" class="btn btn-xs btn-primary"> > </button>
+              <img ng-click="removeItem($index, 'i')" src="bin.png" title="delete from list"/>
+              <img ng-click="moveItem($index, 'i','s')" src="cart.png" title="move to cart"/>
             </td>
           </tr>
         </table>
@@ -97,7 +97,7 @@
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <button ng-click="removeItem($index, 's')" class="btn btn-xs btn-primary"> Х </button>
+              <img ng-click="removeItem($index, 's')" src="bin.png" title="delete from list"/>
             </td>
           </tr>
         </table>
