--- a/views/mystyles.css
+++ b/views/mystyles.css
@@ -28,8 +28,6 @@ h1 {display: inline-block; vertical-align: middle;}
 #errorTextMessage {display: inline-block; width: 50%; height: 45px; vertical-align: middle;}
 .saveItemsBtn, .goToStep2Btn {display: inline; float: right; margin-left: 10px;}
 .footer {clear: both; padding-top: 20px; background-color: #cff4ff;}
-#monthlyList tr:hover {background-color: #cff4ff;}
-#weeklyList tr:hover {background-color: #cff4ff;}
-#dailyList tr:hover {background-color: #cff4ff;}
-#irregularList tr:hover {background-color: #cff4ff;}
+#monthlyList tr:hover, #weeklyList tr:hover, #dailyList tr:hover, #irregularList tr:hover {background-color: #cff4ff;}
+#monthlyList tr, #weeklyList tr, #dailyList tr, #irregularList tr {height: 25px;}
 .item {padding-right: 10px;}
