--- a/views/mystyles.css
+++ b/views/mystyles.css
@@ -26,8 +26,9 @@ nav li a:hover {
 .icon {display: inline; padding: 10px;}
 h1 {display: inline-block; vertical-align: middle;}
 #errorTextMessage {display: inline-block; width: 50%; height: 45px; vertical-align: middle;}
-.saveItemsBtn, .goToStep2Btn {display: inline; float: right; margin-left: 10px;}
+.saveItemsBtn {display: inline; float: right; margin-right: 10px;}
 .footer {clear: both; padding-top: 20px; background-color: #cff4ff;}
 #monthlyList tr:hover, #weeklyList tr:hover, #dailyList tr:hover, #irregularList tr:hover {background-color: #cff4ff;}
 #monthlyList tr, #weeklyList tr, #dailyList tr, #irregularList tr {height: 25px;}
 .item {padding-right: 10px;}
+h3 {color: #337ab7;}
