added 'move to buy later list' icons and logic

--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,8 @@
             </td>
             <td>
               <img ng-click="removeItem($index, 'd')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'd','n')" src="cart.png" title="move to cart"/>
+              <img ng-click="moveItem($index, 'd','n')" src="cart.png" title="buy now"/>
+              <img ng-click="moveItem($index, 'd','l')" src="clock.png" title="buy later"/>
             </td>
           </tr>
         </table>
@@ -54,7 +55,8 @@
             </td>
             <td>
               <img ng-click="removeItem($index, 'w')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'w','n')" src="cart.png" title="move to cart"/>
+              <img ng-click="moveItem($index, 'w','n')" src="cart.png" title="buy now"/>
+              <img ng-click="moveItem($index, 'w','l')" src="clock.png" title="buy later"/>
             </td>
           </tr>
         </table>
@@ -70,7 +72,8 @@
             </td>
             <td>
               <img ng-click="removeItem($index, 'm')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'm','n')" src="cart.png" title="move to cart"/>
+              <img ng-click="moveItem($index, 'm','n')" src="cart.png" title="buy now"/>
+              <img ng-click="moveItem($index, 'm','l')" src="clock.png" title="buy later"/>
             </td>
           </tr>
         </table>
@@ -86,7 +89,8 @@
             </td>
             <td>
               <img ng-click="removeItem($index, 'i')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'i','n')" src="cart.png" title="move to cart"/>
+              <img ng-click="moveItem($index, 'i','n')" src="cart.png" title="buy now"/>
+              <img ng-click="moveItem($index, 'i','l')" src="clock.png" title="buy later"/>
             </td>
           </tr>
         </table>
