--- a/views/index.html
+++ b/views/index.html
@@ -32,14 +32,14 @@
     <div class="col-sm-2 daily" id="dailyList">
       <h3>daily template:</h3>
         <table>
-          <tr ng-repeat="x in productsDaily">
+          <tr ng-repeat="x in itemsDaily">
             <td>
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <img ng-click="removeItem($index, 'd')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'd','n')" src="cart.png" title="buy now"/>
-              <img ng-click="moveItem($index, 'd','l')" src="clock.png" title="buy later"/>
+              <img ng-click="removeItem($index, 'd')" src="bin.png" title="delete from list" class="bin"/>
+              <img ng-click="moveItem($index, 'd','n')" src="cart.png" title="buy now" class='cart'/>
+              <img ng-click="moveItem($index, 'd','l')" src="clock.png" title="buy later" class='clock'/>
             </td>
           </tr>
         </table>
@@ -49,14 +49,14 @@
     <div class="col-sm-2 weekly" id="weeklyList">
       <h3>weekly template:</h3>
         <table>
-          <tr ng-repeat="x in productsWeekly">
+          <tr ng-repeat="x in itemsWeekly">
             <td>
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <img ng-click="removeItem($index, 'w')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'w','n')" src="cart.png" title="buy now"/>
-              <img ng-click="moveItem($index, 'w','l')" src="clock.png" title="buy later"/>
+              <img ng-click="removeItem($index, 'w')" src="bin.png" title="delete from list" class="bin"/>
+              <img ng-click="moveItem($index, 'w','n')" src="cart.png" title="buy now" class='cart'/>
+              <img ng-click="moveItem($index, 'w','l')" src="clock.png" title="buy later" class='clock'/>
             </td>
           </tr>
         </table>
@@ -66,14 +66,14 @@
     <div class="col-sm-2 monthly" id="monthlyList">
       <h3>monthly template:</h3>
         <table>
-          <tr ng-repeat="x in productsMonthly">
+          <tr ng-repeat="x in itemsMonthly">
             <td>
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <img ng-click="removeItem($index, 'm')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'm','n')" src="cart.png" title="buy now"/>
-              <img ng-click="moveItem($index, 'm','l')" src="clock.png" title="buy later"/>
+              <img ng-click="removeItem($index, 'm')" src="bin.png" title="delete from list" class="bin"/>
+              <img ng-click="moveItem($index, 'm','n')" src="cart.png" title="buy now" class='cart'/>
+              <img ng-click="moveItem($index, 'm','l')" src="clock.png" title="buy later" class='clock'/>
             </td>
           </tr>
         </table>
@@ -83,14 +83,14 @@
     <div class="col-sm-2 irregular" id="irregularList">
       <h3>on occasion template:</h3>
         <table>
-          <tr ng-repeat="x in productsIrregular">
+          <tr ng-repeat="x in itemsIrregular">
             <td>
               <div class="item">{{x}} </div>
             </td>
             <td>
-              <img ng-click="removeItem($index, 'i')" src="bin.png" title="delete from list"/>
-              <img ng-click="moveItem($index, 'i','n')" src="cart.png" title="buy now"/>
-              <img ng-click="moveItem($index, 'i','l')" src="clock.png" title="buy later"/>
+              <img ng-click="removeItem($index, 'i')" src="bin.png" title="delete from list" class="bin"/>
+              <img ng-click="moveItem($index, 'i','n')" src="cart.png" title="buy now" class='cart'/>
+              <img ng-click="moveItem($index, 'i','l')" src="clock.png" title="buy later" class='clock'/>
             </td>
           </tr>
         </table>
@@ -100,7 +100,7 @@
     <div class="col-sm-2 buyNow" id="buyNowList">
       <h3>'buy now' list:</h3>
         <table>
-          <tr ng-repeat="x in productsBuyNow">
+          <tr ng-repeat="x in itemsBuyNow">
             <td>
               <div class="item">{{x}} </div>
             </td>
@@ -109,13 +109,15 @@
             </td>
           </tr>
         </table>
-        <input ng-model="addMeBuyNow">
-        <button ng-click="addItem('n')" class="btn  btn-primary">Add</button>
+        <div id="addNowInput">
+          <input ng-model="addMeBuyNow">
+          <button ng-click="addItem('n')" class="btn  btn-primary">Add</button>
+        </div>
     </div>
     <div class="col-sm-2 buyLater" id="buyLaterList">
       <h3>'buy later' list:</h3>
         <table>
-          <tr ng-repeat="x in productsBuyLater">
+          <tr ng-repeat="x in itemsBuyLater">
             <td>
               <div class="item">{{x}} </div>
             </td>
@@ -130,7 +132,8 @@
     <div class="footer">
       <div>{{errortext}}</div>
       <div id="errorTextMessage">Try to add the same item twice, and you will get an error message.</div>
-      <button ng-click="saveItems()" class="btn btn-primary saveItemsBtn">Save lists in storage</button>
+      <button ng-click="saveShoppingItems()" id="saveShoppingItemsButton" class="btn btn-primary saveItemsBtn">Save shopping lists</button>
+      <button ng-click="saveTemplateItems()" id="saveTemplateItemsButton" class="btn btn-primary saveItemsBtn">Save template lists</button>
     </div>
   </div> <!-- end app -->
 </div>
